# object-storage-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  README.md  docker-compose-test.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: .ci.yml  dependabot.yml
.github/workflows/: .ci.yml  release-build.yml
object_storage_api/: .env.example  main.py
object_storage_api/auth/: jwt_bearer.py  jwt_middleware.py
object_storage_api/core/: config.py  consts.py  custom_object_id.py  database.py  exceptions.py  image.py  object_store.py
object_storage_api/models/: attachment.py  custom_object_id_data_types.py  image.py  mixins.py
object_storage_api/repositories/: attachment.py  image.py
object_storage_api/routers/: attachment.py  image.py
object_storage_api/schemas/: attachment.py  image.py  mixins.py
object_storage_api/services/: attachment.py  image.py  utils.py
object_storage_api/stores/: attachment.py  image.py
scripts/: dev_cli.py  generate_mock_data.py  mongodb_entrypoint.sh
test/: mock_data.py  pytest.ini
test/e2e/: conftest.py  test_attachment.py  test_image.py  test_jwt_bearer.py  test_jwt_middleware.py
test/unit/auth/: test_jwt_bearer.py
test/unit/core/: test_custom_objectid.py  test_image.py
test/unit/repositories/: conftest.py  test_attachment.py  test_image.py
test/unit/services/: conftest.py  test_attachment.py  test_image.py  test_utils.py
test/unit/stores/: conftest.py  test_attachment.py  test_image.py
