[project]
name = "object-storage_api"
description = "Python microservice providing an API for handling attachments and images in an S3 object store."
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"

dependencies = [
    "cryptography",
    "fastapi[all]",
    "PyJWT",
    "pymongo",
    "boto3",
    "Pillow"
]

[project.urls]
"Repository" = "https://github.com/ral-facilities/object-storage-api"

[project.optional-dependencies]
code-analysis = [
    "black==24.10.0",
    "pylint==3.3.3",
    "object-storage-api[test]"
]

test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.1",
    "pytest-cov==6.0.0",
    "pytest-env==1.1.5",
    "requests==2.32.3"
]

scripts = [
    "faker==33.3.0",
    "faker-file[pdf,docx,images]==0.17.14",
]

dev = [
    "object-storage-api[code-analysis]",
    "object-storage-api[test]",
    "object-storage-api[scripts]",
]

[tool.setuptools]
packages = ["object_storage_api"]
