[project]
name = "object-storage_api"
description = "Python microservice providing an API for handling attachments and images in an S3 object store."
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"

dependencies = [
    "cryptography",
    "fastapi[all]",
    "PyJWT",
    "pymongo",
    "boto3",
    "Pillow"
]

[project.urls]
"Repository" = "https://github.com/ral-facilities/object-storage-api"

[project.optional-dependencies]
code-analysis = [
    "black==25.1.0",
    "pylint==3.3.6",
    "object-storage-api[test]"
]

test = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
    "pytest-env==1.1.5",
    "requests==2.32.3"
]

scripts = [
    "faker==37.1.0",
    "faker-file[pdf,docx,images]==0.18.1",
]

dev = [
    "object-storage-api[code-analysis]",
    "object-storage-api[test]",
    "object-storage-api[scripts]",
]

[tool.setuptools]
packages = ["object_storage_api"]
