[project]
name = "object-storage-api"
description = "Python microservice providing an API for handling attachments and images in an S3 object store."
readme = "README.md"
requires-python = ">=3.12"
version = "1.0.0"

dependencies = [
    "cryptography",
    "fastapi[all]",
    "PyJWT",
    "pymongo",
    "boto3",
    "Pillow"
]

[project.urls]
"Repository" = "https://github.com/ral-facilities/object-storage-api"

[project.optional-dependencies]
code-analysis = [
    "black==25.1.0",
    "pylint==3.3.7",
    "object-storage-api[test]"
]

test = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
    "pytest-env==1.1.5",
    "requests==2.32.4"
]

scripts = [
    "faker==37.5.3",
    "faker-file[pdf,docx,images]==0.18.4",
]

dev = [
    "object-storage-api[code-analysis]",
    "object-storage-api[test]",
    "object-storage-api[scripts]",
]

[tool.setuptools.packages.find]
include  = ["object_storage_api", "object_storage_api*"]
